edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/way-platform/tachograph-go/proto/gen/go/wayplatform/connect/tachograph/dd/v1";

extend google.protobuf.EnumValueOptions {
  int32 protocol_enum_value = 582387;
  int32 code_page = 582388;
}
