edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "wayplatform/connect/tachograph/dd/v1/annotations.proto";

// Encoding defines the character encodings for strings as specified in the
// tachograph regulations. It is used within the `StringValue` message to
// provide a canonical representation for all complex string types.
//
// How it maps to ASN.1 types:
//
// 1.  Code-Paged Strings (e.g., `Name`, `Address`): These types are defined
//     in the protocol as a sequence of a code page byte and an octet string.
//     The `code_page` custom option on the enum values (e.g., ISO_8859_1)
//     is used to store the corresponding numeric protocol value.
//
// 2.  Fixed-Encoding Strings (e.g., `IA5String`): These types have a fixed
//     encoding (ASCII) and do not have a code page byte in the protocol.
//     The `IA5` enum value is used to represent this encoding.
enum Encoding {
  // The encoding is not specified.
  ENCODING_UNSPECIFIED = 0;

  // The encoding was present but not recognized.
  ENCODING_UNRECOGNIZED = 1;

  // Default encoding for code-paged strings (protocol value 0).
  ENCODING_DEFAULT = 2 [(code_page) = 0];

  // Empty/unassigned string (protocol value 255 for code-paged strings).
  ENCODING_EMPTY = 3 [(code_page) = 255];

  // ISO/IEC 8859-1: Latin alphabet No. 1
  ISO_8859_1 = 4 [(code_page) = 1];

  // ISO/IEC 8859-2: Latin alphabet No. 2
  ISO_8859_2 = 5 [(code_page) = 2];

  // ISO/IEC 8859-3: Latin alphabet No. 3
  ISO_8859_3 = 6 [(code_page) = 3];

  // ISO/IEC 8859-5: Latin/Cyrillic alphabet
  ISO_8859_5 = 7 [(code_page) = 5];

  // ISO/IEC 8859-7: Latin/Greek alphabet
  ISO_8859_7 = 8 [(code_page) = 7];

  // ISO/IEC 8859-9: Latin alphabet No. 5
  ISO_8859_9 = 9 [(code_page) = 9];

  // ISO/IEC 8859-13: Latin alphabet No. 7
  ISO_8859_13 = 10 [(code_page) = 13];

  // ISO/IEC 8859-15: Latin alphabet No. 9
  ISO_8859_15 = 11 [(code_page) = 15];

  // ISO/IEC 8859-16: Latin alphabet No. 10
  ISO_8859_16 = 12 [(code_page) = 16];

  // KOI8-R: Cyrillic
  KOI8_R = 13 [(code_page) = 80];

  // KOI8-U: Ukrainian
  KOI8_U = 14 [(code_page) = 85];
}
